# aipmAI-examples

marketing_strategy/: README.md
marketing_strategy/src/: pyproject.toml
marketing_strategy/src/marketing_posts/: crew.py  main.py
marketing_strategy/src/marketing_posts/config/: agents.yaml  tasks.yaml
prep-for-a-meeting/: README.md
prep-for-a-meeting/src/: .env.example  pyproject.toml
prep-for-a-meeting/src/meeting_preparation/: crew.py  main.py
prep-for-a-meeting/src/meeting_preparation/config/: agents.yaml  tasks.yaml
prep-for-a-meeting/src/meeting_preparation/tools/: custom_tool.py
