[tool.poetry]
name = "marketing_posts"
version = "0.1.0"
description = "aipm-examples using crewAI"
authors = ["aithoughts <ai.flyingwheel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
aipmai = { extras = ["tools"], version = "0.41.0" }
aipmai-tools = "0.4.26"

[tool.poetry.scripts]
marketing_posts = "marketing_posts.main:run"
train = "marketing_posts.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
